Fix cursor color when revert to non-dark mode

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
 }
 
 /* Cursor */
-.kix-cursor-caret {
+.darkdocs .kix-cursor-caret {
   border-color: #fff !important;
 }
 
